--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .news-container .card-title {
   background: rgba(0, 0, 0, 0.7);
 }
+
 .progress {
   position: fixed;
   top: 0;
@@ -14,4 +15,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-flow: dense;
+}
+
+.select-dropdown,
+.dropdown-content span {
+  text-transform: capitalize;
 }
